completed day 7 code-along

--- a/views/results.erb
+++ b/views/results.erb
@@ -5,8 +5,14 @@
     <title>title</title>
   </head>
   <body>
-   
-   
-   
+    <!--<h1>You have been alive for <%=@user_days%> days! Or <%=@user_hours%> hours. Or <%=@user_min%> minutes. Or <%=@user_sec%> seconds. Or just about <%=@user_months%> months.</h1> -->
+    
+    <!--<h1> <%=@translation%> </h1>-->
+    
+    <!--<h1> <%=@klossified%> </h1>-->
+    
+    <!--<h1> <%=@gif%> </h1>-->
+    <img src="<%=@gif%>">
+     
   </body>
 </html>
