--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,26 @@
     <title>title</title>
     <link rel="stylesheet" href="css/style.css">
   <body>
+    <a href="/about">About</a>
     <h1>Welcome to the Klossy Kalculator! How many days have you been alive?</h1>
 
+
+    <form method="POST" action="/calculate_days">
+      <h3>What is your birthday?</h3>
+      <input type="text" name="birthday">
+      <input type="submit">
+      
+      <h3>What phrase would you like to translate into pig latin?</h3>
+      <input type="text" name="pig_latin_string"
+      <input type="submit">
+      
+      <h3>What would you like to Klossify?</h3>
+      <input type="text" name="klossify_string">
+      <input type="submit">
+      
+      <h3>What gif do you want to search for?</h3>
+      <input type="text" name="search">
+      <input type="submit">
+    </form>
   </body>
 </html>
